--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-<html><body>Open Data Ffm</body></html>
+<html>
+    <head>
+        <title>Open Data Frankfurt am Main - OK Lab Ffm</title>
+    </head>
+    <body>
+        <h1>Open Data Ffm</h1>
+
+        <p>
+            <strong>Urban Developers in Frankfurt/M. wanted!</strong>
+        </p>
+        <p>
+            We are a local group that is actively engaged in open data and civic hacking. We consider how code and data
+            can help our city, region and neighborhood in digital ways to make better and more beautiful. We share
+            knowledge, create free data, visualizations and applications and publish analyzes. For this purpose, we
+            meet regularly.
+        </p>
+        <p>
+            Just look over! We welcome new faces who bring their own ideas and support us.
+        </p>
+        <p>
+            Code and Data for Frankfurt am Main!
+        </p>
+
+        <hr />
+
+        <p>
+            <strong>Stadtentwickler in Frankfurt/M. gesucht!</strong>
+        </p>
+        <p>
+            Wir sind eine lokale Gruppe, die sich aktiv mit Open Data und Civic Hacking beschäftigt. Wir überlegen uns,
+            wie Code und Daten dabei helfen können unsere Stadt, Region und Nachbarschaft auch digital schöner und
+            besser zu gestalten. Wir tauschen Wissen aus, erstellen freie Daten, Visualisierungen und Anwendungen und
+            veröffentlichen Analysen. Dazu treffen wir uns regelmäßig.
+        </p>
+        <p>
+            Schaut einfach vorbei! Wir freuen uns über neue Gesichter, die eigene Ideen mitbringen und uns
+            unterstützen.
+        </p>
+        <p>
+            <strong>Code und Daten for Frankfurt am Main!</strong>
+        </p>
+
+        <h2>OK Lab Frankfurt am Main</h2>
+
+        <ul>
+            <li><a href="http://codefor.de/frankfurt/" target="_blank">Homepage</a></li>
+            <li><a href="" target="_blank">Meetup</a></li>
+            <li><a href="" target="_blank">Twitter</a></li>
+        </ul>
+
+        <h3>Links</h3>
+        <ul>
+            <li><a href="https://github.com/opendataffm" target="_blank">GitHup</a></li>
+        </ul>
+
+        <h3>Sponsors</h3>
+        <ul>
+            <li><a href="http://www.die-zentrale-ffm.de/" target="_blank">Die Zentrale</a> They give us a place to meet.</li>
+            <li><a href="http://frankfurt-business.net/standort-frankfurt/branchenfokus/kreativwirtschaft/" target="_blank">Kompetenzzentrum Kreativwirtschaft der Wirtschaftsförderung Frankfurt GmbH</a> They give us a place to meet.</li>
+        </ul>
+    </body>
+</html>
