--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Open Data Frankfurt am Main - OK Lab Ffm</title>
     </head>
     <body>
-        <h1>Open Data Ffm</h1>
+        <h1>Open Data Frankfurt am Main - OK Lab Frankfurt am Main</h1>
 
         <p>
             <strong>Urban Developers in Frankfurt/M. wanted!</strong>
@@ -18,7 +18,7 @@
             Just look over! We welcome new faces who bring their own ideas and support us.
         </p>
         <p>
-            Code and Data for Frankfurt am Main!
+            <strong>Code and Data for Frankfurt am Main!</strong>
         </p>
 
         <hr />
@@ -40,17 +40,13 @@
             <strong>Code und Daten for Frankfurt am Main!</strong>
         </p>
 
-        <h2>OK Lab Frankfurt am Main</h2>
-
         <ul>
             <li><a href="http://codefor.de/frankfurt/" target="_blank">Homepage</a></li>
-            <li><a href="" target="_blank">Meetup</a></li>
-            <li><a href="" target="_blank">Twitter</a></li>
-        </ul>
-
-        <h3>Links</h3>
-        <ul>
-            <li><a href="https://github.com/opendataffm" target="_blank">GitHup</a></li>
+            <li><a href="http://www.meetup.com/OKLabFfm/" target="_blank">Meetup</a></li>
+            <li><a href="mailto:frankfurt@codefor.de" target="_blank">E-Mail</a></li>
+            <li><a href="http://twitter.com/codeforffm" target="_blank">Twitter</a></li>
+            <li><a href="https://lists.okfn.org/mailman/listinfo/codeforffm" target="_blank">Mailingliste</a></li>
+            <li><a href="https://github.com/opendataffm" target="_blank">GitHub</a></li>
         </ul>
 
         <h3>Sponsors</h3>
@@ -58,5 +54,12 @@
             <li><a href="http://www.die-zentrale-ffm.de/" target="_blank">Die Zentrale</a> They give us a place to meet.</li>
             <li><a href="http://frankfurt-business.net/standort-frankfurt/branchenfokus/kreativwirtschaft/" target="_blank">Kompetenzzentrum Kreativwirtschaft der Wirtschaftsförderung Frankfurt GmbH</a> They give us a place to meet.</li>
         </ul>
+
+        <h3>Weitere Links</h3>
+        <ul>
+            <li><a href="http://www.schoeneaussichtenffm.de/" target="_blank">Schöne Aussichten - Forum für Frankfurt</a></li>
+            <li><a href="http://www.frankfurt-gestalten.de/" target="_blank">Frankfurt gestalten - Bürger machen Stadt</a></li>
+        </ul>
+
     </body>
 </html>
