--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
         <title>Open Data Frankfurt am Main - OK Lab Ffm</title>
     </head>
     <body>
-        <h1>Open Data Frankfurt am Main - OK Lab Frankfurt am Main</h1>
+        <h1>Open Data Frankfurt am Main - OK Lab Ffm</h1>
+
+        <h2>Next Dates / Nächste Termine</h2>
+
+        <ul>
+            <li>Mon 2015-02-02 7pm <a href="http://bit.ly/1AKcFdv">OK Lab Ffm</a> (Location: Die Zentrale, Berger Straße 175, D-60385 Frankfurt am Main)</li>
+            <li>Sat 2015-02-21 9am <a href=http://bit.ly/1xK1rF1">ODD15 Hackathon Ffm</a> (Location: Die Zentrale, Berger Straße 175, D-60385 Frankfurt am Main)</li>
+            <li>Mon 2015-03-02 7pm <a href="http://bit.ly/1BebaDh">OK Lab Ffm</a> (Location: [MAINRAUM], Ostbahnhofstraße 15, D-60314 Frankfurt am Main)</li>
+        </ul>
+
+        <hr />
 
         <p>
             <strong>Urban Developers in Frankfurt/M. wanted!</strong>
@@ -41,12 +51,20 @@
         </p>
 
         <ul>
-            <li><a href="http://codefor.de/frankfurt/" target="_blank">Homepage</a></li>
-            <li><a href="http://www.meetup.com/OKLabFfm/" target="_blank">Meetup</a></li>
             <li><a href="mailto:frankfurt@codefor.de" target="_blank">E-Mail</a></li>
             <li><a href="http://twitter.com/codeforffm" target="_blank">Twitter</a></li>
             <li><a href="https://lists.okfn.org/mailman/listinfo/codeforffm" target="_blank">Mailingliste</a></li>
-            <li><a href="https://github.com/opendataffm" target="_blank">GitHub</a></li>
+            <li>Wir auf <a href="http://codefor.de/frankfurt/" target="_blank">codefor.de</a></li>
+            <li>Treffen auf <a href="http://www.meetup.com/OKLabFfm/" target="_blank">Meetup</a></li>
+            <li>Code auf <a href="https://github.com/opendataffm" target="_blank">GitHub</a></li>
+        </ul>
+
+        <p>
+            Außerdem...
+        </p>
+
+        <ul>
+            <li>Wir auf <a href="http://usergroups.rheinmainrocks.de/~oklabffm" target="_blank">Usergroups RheinMain</a></li>
         </ul>
 
         <h3>Sponsors</h3>
@@ -59,6 +77,7 @@
         <ul>
             <li><a href="http://www.schoeneaussichtenffm.de/" target="_blank">Schöne Aussichten - Forum für Frankfurt</a></li>
             <li><a href="http://www.frankfurt-gestalten.de/" target="_blank">Frankfurt gestalten - Bürger machen Stadt</a></li>
+            <li><a href="http://www.schoeneaussichtenffm.de/" target="_blank">Schöne Aussichten - Forum für Frankfurt</a></li>
         </ul>
 
     </body>
