Offene Daten Frankfurt added.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <h2>Next Dates / Nächste Termine</h2>
 
         <ul>
-            <li>Mon 2015-02-02 7pm <a href="http://bit.ly/1AKcFdv">OK Lab Ffm</a> (Location: Die Zentrale, Berger Straße 175, D-60385 Frankfurt am Main)</li>
-            <li>Sat 2015-02-21 9am <a href=http://bit.ly/1xK1rF1">ODD15 Hackathon Ffm</a> (Location: Die Zentrale, Berger Straße 175, D-60385 Frankfurt am Main)</li>
-            <li>Mon 2015-03-02 7pm <a href="http://bit.ly/1BebaDh">OK Lab Ffm</a> (Location: [MAINRAUM], Ostbahnhofstraße 15, D-60314 Frankfurt am Main)</li>
+            <li>Mon 2015-02-02 7pm <a href="http://bit.ly/1AKcFdv">OK Lab Ffm</a> | Die Zentrale, Berger Straße 175, D-60385 Frankfurt am Main</li>
+            <li>Sat 2015-02-21 9am <a href=http://bit.ly/1xK1rF1">ODD15 Hackathon Ffm</a> | Die Zentrale, Berger Straße 175, D-60385 Frankfurt am Main</li>
+            <li>Mon 2015-03-02 7pm <a href="http://bit.ly/1BebaDh">OK Lab Ffm</a> | [MAINRAUM], Ostbahnhofstraße 15, D-60314 Frankfurt am Main</li>
         </ul>
 
         <hr />
@@ -77,7 +77,7 @@
         <ul>
             <li><a href="http://www.schoeneaussichtenffm.de/" target="_blank">Schöne Aussichten - Forum für Frankfurt</a></li>
             <li><a href="http://www.frankfurt-gestalten.de/" target="_blank">Frankfurt gestalten - Bürger machen Stadt</a></li>
-            <li><a href="http://www.schoeneaussichtenffm.de/" target="_blank">Schöne Aussichten - Forum für Frankfurt</a></li>
+            <li><a href="http://www.offenedaten.frankfurt.de/" target="_blank">Offene Daten Frankfurt</a></li>
         </ul>
 
     </body>
