Code for Germany added.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html xml:lang="en">
     <head>
+        <meta charset="utf-8">
         <title>Open Data Frankfurt am Main - OK Lab Ffm</title>
     </head>
     <body>
         <h1>Open Data Frankfurt am Main - OK Lab Ffm</h1>
-
-        <h2>Next Dates / Nächste Termine</h2>
-
-        <ul>
-            <li>Mon 2015-02-02 7pm <a href="http://bit.ly/1AKcFdv">OK Lab Ffm</a> | Die Zentrale, Berger Straße 175, D-60385 Frankfurt am Main</li>
-            <li>Sat 2015-02-21 9am <a href=http://bit.ly/1xK1rF1">ODD15 Hackathon Ffm</a> | Die Zentrale, Berger Straße 175, D-60385 Frankfurt am Main</li>
-            <li>Mon 2015-03-02 7pm <a href="http://bit.ly/1BebaDh">OK Lab Ffm</a> | [MAINRAUM], Ostbahnhofstraße 15, D-60314 Frankfurt am Main</li>
-        </ul>
 
         <hr />
 
@@ -50,30 +44,49 @@
             <strong>Code und Daten for Frankfurt am Main!</strong>
         </p>
 
+        <hr />
+
+        <h2>Next Dates</h2>
+
+        <ul>
+            <li>
+                Mon 2015-02-02 7pm <a href="http://bit.ly/1AKcFdv">OK Lab Ffm</a><br />
+                Die Zentrale, Berger Straße 175, D-60385 Frankfurt am Main</li>
+            <li>
+                Sat 2015-02-21 9am <a href=http://bit.ly/1xK1rF1">ODD15 Hackathon Ffm</a><br />
+                Die Zentrale, Berger Straße 175, D-60385 Frankfurt am Main</li>
+            <li>
+                Mon 2015-03-02 7pm <a href="http://bit.ly/1BebaDh">OK Lab Ffm</a><br />
+                [MAINRAUM], Ostbahnhofstraße 15, D-60314 Frankfurt am Main</li>
+        </ul>
+
+        <h2>Contact</h2>
+
         <ul>
             <li><a href="mailto:frankfurt@codefor.de" target="_blank">E-Mail</a></li>
             <li><a href="http://twitter.com/codeforffm" target="_blank">Twitter</a></li>
-            <li><a href="https://lists.okfn.org/mailman/listinfo/codeforffm" target="_blank">Mailingliste</a></li>
-            <li>Wir auf <a href="http://codefor.de/frankfurt/" target="_blank">codefor.de</a></li>
-            <li>Treffen auf <a href="http://www.meetup.com/OKLabFfm/" target="_blank">Meetup</a></li>
-            <li>Code auf <a href="https://github.com/opendataffm" target="_blank">GitHub</a></li>
+            <li><a href="https://lists.okfn.org/mailman/listinfo/codeforffm" target="_blank">Mailing list</a></li>
+            <li>Our page on <a href="http://codefor.de/frankfurt/" target="_blank">codefor.de</a> with project overview</li>
+            <li>Join us on <a href="http://www.meetup.com/OKLabFfm/" target="_blank">Meetup</a></li>
+            <li>Our Code on <a href="https://github.com/opendataffm" target="_blank">GitHub</a></li>
         </ul>
 
         <p>
-            Außerdem...
+            Furthermore...
         </p>
 
         <ul>
-            <li>Wir auf <a href="http://usergroups.rheinmainrocks.de/~oklabffm" target="_blank">Usergroups RheinMain</a></li>
+            <li>We at <a href="http://usergroups.rheinmainrocks.de/~oklabffm" target="_blank">Usergroups RheinMain</a></li>
         </ul>
 
         <h3>Sponsors</h3>
         <ul>
+            <li><a href="http://codefor.de/" target="_blank">Code for Germany</a></li>
             <li><a href="http://www.die-zentrale-ffm.de/" target="_blank">Die Zentrale</a> They give us a place to meet.</li>
             <li><a href="http://frankfurt-business.net/standort-frankfurt/branchenfokus/kreativwirtschaft/" target="_blank">Kompetenzzentrum Kreativwirtschaft der Wirtschaftsförderung Frankfurt GmbH</a> They give us a place to meet.</li>
         </ul>
 
-        <h3>Weitere Links</h3>
+        <h3>Further Links</h3>
         <ul>
             <li><a href="http://www.schoeneaussichtenffm.de/" target="_blank">Schöne Aussichten - Forum für Frankfurt</a></li>
             <li><a href="http://www.frankfurt-gestalten.de/" target="_blank">Frankfurt gestalten - Bürger machen Stadt</a></li>
